<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="185dp"
    android:layout_height="250dp">

    <ImageView
        android:id="@+id/iv_movie_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/poster_content_description" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/colorCardBg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_card_movie_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/movie_fake_title"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/constraint_card_movie_info"
                app:layout_constraintLeft_toLeftOf="@id/constraint_card_movie_info"
                app:layout_constraintTop_toTopOf="@id/constraint_card_movie_info"/>

            <ImageView
                android:id="@+id/iv_star_rating"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:src="@android:drawable/btn_star_big_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/constraint_card_movie_info"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                app:layout_constraintVertical_bias="1.0"
                android:contentDescription="@string/star_content_description" />

            <TextView
                android:id="@+id/tv_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:text="@string/movie_fake_score"
                app:layout_constraintTop_toTopOf="@id/iv_star_rating"
                app:layout_constraintBottom_toBottomOf="@id/iv_star_rating"
                app:layout_constraintStart_toEndOf="@id/iv_star_rating" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>